--- a/springbootsell/src/main/resources/application-dev.yml
+++ b/springbootsell/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/redbag?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/sell?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: root
     password: root
   jpa:
