--- a/springbootsell/src/main/resources/application-dev.yml
+++ b/springbootsell/src/main/resources/application-dev.yml
@@ -15,3 +15,5 @@ spring:
     default-property-inclusion: non_null
   mvc:
     static-path-pattern: /static/**
+#  resources:
+#    static-locations: file:E:\dj\Gituhub\Javaforjkd\springbootsell\src\main\resources\static\
